# 2d-convolution-optimize

./: CMakeLists.txt  README.md  runner_script.sh
include/: studentlib.h
src/: CMakeLists.txt  main.cpp
tester/: CMakeLists.txt  tester.cpp
