add_library(studentlib main.cpp)
target_include_directories(studentlib PUBLIC ${CMAKE_SOURCE_DIR}/include)
find_package(OpenMP REQUIRED)
if(OPENMP_FOUND)
    target_compile_options(studentlib PRIVATE ${OpenMP_CXX_FLAGS})
    target_link_libraries(studentlib PRIVATE ${OpenMP_CXX_LIBRARIES})
endif()
target_compile_options(studentlib PRIVATE -Ofast -fopenmp -mfma -march=native -ftree-vectorize -ffast-math)
